Compiler/Syntax/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARITH_OP
    AT
    BREAK
    COMMENT
    EQUAL
    False
    GREATER_THAN
    GREATER_THAN_EQUAL
    LESS_THAN
    LESS_THAN_EQUAL
    MASTER
    NOT_EQUAL
    REPEAT
    TRUE
    UNTIL

Grammar

Rule 0     S' -> program
Rule 1     program -> procedure_set
Rule 2     procedure_set -> procedure procedure_set
Rule 3     procedure_set -> procedure
Rule 4     procedure -> PROC ID LPAREN statements RPAREN SEMICOLON
Rule 5     statements -> statement
Rule 6     statements -> statement statements
Rule 7     statement -> variable_declaration SEMICOLON
Rule 8     statement -> variable_update SEMICOLON
Rule 9     statement -> alter_variable SEMICOLON
Rule 10    statement -> variable_with_alter SEMICOLON
Rule 11    statement -> alter_b_variable SEMICOLON
Rule 12    statement -> signal_function SEMICOLON
Rule 13    statement -> view_signal_function SEMICOLON
Rule 14    statement -> is_true_function SEMICOLON
Rule 15    statement -> case_statement SEMICOLON
Rule 16    statement -> while_statement SEMICOLON
Rule 17    statement -> procedure_call SEMICOLON
Rule 18    statement -> print_statement SEMICOLON
Rule 19    statement -> empty
Rule 20    variable_declaration -> NEW ID COMMA type_value
Rule 21    type_value -> LPAREN type COMMA value RPAREN
Rule 22    type -> NUM
Rule 23    type -> BOOL
Rule 24    type -> STRING
Rule 25    value -> NUMBER
Rule 26    value -> BOOLEAN
Rule 27    value -> STRING
Rule 28    value -> ID
Rule 29    value -> arith_op
Rule 30    arith_op -> math_operation
Rule 31    math_operation -> math_operation operator math_operation
Rule 32    math_operation -> math_operation operator math_value
Rule 33    math_operation -> math_value operator math_operation
Rule 34    math_operation -> math_value operator math_value
Rule 35    math_operation_paren -> LPAREN math_operation RPAREN
Rule 36    math_value -> ID
Rule 37    math_value -> NUMBER
Rule 38    math_value -> math_value_negative
Rule 39    math_value -> math_operation_paren
Rule 40    math_value_negative -> SUB ID
Rule 41    math_value_negative -> SUB NUMBER
Rule 42    operator -> ADD
Rule 43    operator -> SUB
Rule 44    operator -> MUL
Rule 45    operator -> DIV
Rule 46    operator -> REL_OP
Rule 47    variable_update -> VALUES LPAREN ID COMMA value RPAREN
Rule 48    alter_variable -> ALTER LPAREN ID COMMA operator COMMA value RPAREN
Rule 49    variable_with_alter -> VALUES LPAREN ID COMMA alter_variable RPAREN
Rule 50    alter_b_variable -> ALTER_B LPAREN ID RPAREN
Rule 51    signal_function -> SIGNAL LPAREN position_state COMMA position_state RPAREN
Rule 52    position_state -> value
Rule 53    view_signal_function -> VIEW_SIGNAL LPAREN position_state RPAREN
Rule 54    is_true_function -> IS_TRUE LPAREN ID RPAREN
Rule 55    case_statement -> CASE ID case_options
Rule 56    case_statement -> CASE ID case_options else_option
Rule 57    case_options -> when_statement
Rule 58    case_options -> when_statement case_options
Rule 59    when_statement -> WHEN value THEN LPAREN statements RPAREN
Rule 60    else_option -> ELSE LPAREN statements RPAREN
Rule 61    while_statement -> WHILE condition LPAREN statements RPAREN
Rule 62    condition -> value
Rule 63    condition -> is_true_function
Rule 64    procedure_call -> CALL LPAREN ID RPAREN
Rule 65    print_statement -> PRINT_VALUES LPAREN print_value_list RPAREN
Rule 66    print_value_list -> print_value
Rule 67    print_value_list -> print_value COMMA print_value_list
Rule 68    print_value -> value
Rule 69    print_value -> is_true_function
Rule 70    print_value -> view_signal_function
Rule 71    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 42
ALTER                : 48
ALTER_B              : 50
ARITH_OP             : 
AT                   : 
BOOL                 : 23
BOOLEAN              : 26
BREAK                : 
CALL                 : 64
CASE                 : 55 56
COMMA                : 20 21 47 48 48 49 51 67
COMMENT              : 
DIV                  : 45
ELSE                 : 60
EQUAL                : 
False                : 
GREATER_THAN         : 
GREATER_THAN_EQUAL   : 
ID                   : 4 20 28 36 40 47 48 49 50 54 55 56 64
IS_TRUE              : 54
LESS_THAN            : 
LESS_THAN_EQUAL      : 
LPAREN               : 4 21 35 47 48 49 50 51 53 54 59 60 61 64 65
MASTER               : 
MUL                  : 44
NEW                  : 20
NOT_EQUAL            : 
NUM                  : 22
NUMBER               : 25 37 41
PRINT_VALUES         : 65
PROC                 : 4
REL_OP               : 46
REPEAT               : 
RPAREN               : 4 21 35 47 48 49 50 51 53 54 59 60 61 64 65
SEMICOLON            : 4 7 8 9 10 11 12 13 14 15 16 17 18
SIGNAL               : 51
STRING               : 24 27
SUB                  : 40 41 43
THEN                 : 59
TRUE                 : 
UNTIL                : 
VALUES               : 47 49
VIEW_SIGNAL          : 53
WHEN                 : 59
WHILE                : 61
error                : 

Nonterminals, with rules where they appear

alter_b_variable     : 11
alter_variable       : 9 49
arith_op             : 29
case_options         : 55 56 58
case_statement       : 15
condition            : 61
else_option          : 56
empty                : 19
is_true_function     : 14 63 69
math_operation       : 30 31 31 32 33 35
math_operation_paren : 39
math_value           : 32 33 34 34
math_value_negative  : 38
operator             : 31 32 33 34 48
position_state       : 51 51 53
print_statement      : 18
print_value          : 66 67
print_value_list     : 65 67
procedure            : 2 3
procedure_call       : 17
procedure_set        : 1 2
program              : 0
signal_function      : 12
statement            : 5 6
statements           : 4 6 59 60 61
type                 : 21
type_value           : 20
value                : 21 47 48 52 59 62 68
variable_declaration : 7
variable_update      : 8
variable_with_alter  : 10
view_signal_function : 13 70
when_statement       : 57 58
while_statement      : 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . procedure_set
    (2) procedure_set -> . procedure procedure_set
    (3) procedure_set -> . procedure
    (4) procedure -> . PROC ID LPAREN statements RPAREN SEMICOLON

    PROC            shift and go to state 4

    program                        shift and go to state 1
    procedure_set                  shift and go to state 2
    procedure                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> procedure_set .

    $end            reduce using rule 1 (program -> procedure_set .)


state 3

    (2) procedure_set -> procedure . procedure_set
    (3) procedure_set -> procedure .
    (2) procedure_set -> . procedure procedure_set
    (3) procedure_set -> . procedure
    (4) procedure -> . PROC ID LPAREN statements RPAREN SEMICOLON

    $end            reduce using rule 3 (procedure_set -> procedure .)
    PROC            shift and go to state 4

    procedure                      shift and go to state 3
    procedure_set                  shift and go to state 5

state 4

    (4) procedure -> PROC . ID LPAREN statements RPAREN SEMICOLON

    ID              shift and go to state 6


state 5

    (2) procedure_set -> procedure procedure_set .

    $end            reduce using rule 2 (procedure_set -> procedure procedure_set .)


state 6

    (4) procedure -> PROC ID . LPAREN statements RPAREN SEMICOLON

    LPAREN          shift and go to state 7


state 7

    (4) procedure -> PROC ID LPAREN . statements RPAREN SEMICOLON
    (5) statements -> . statement
    (6) statements -> . statement statements
    (7) statement -> . variable_declaration SEMICOLON
    (8) statement -> . variable_update SEMICOLON
    (9) statement -> . alter_variable SEMICOLON
    (10) statement -> . variable_with_alter SEMICOLON
    (11) statement -> . alter_b_variable SEMICOLON
    (12) statement -> . signal_function SEMICOLON
    (13) statement -> . view_signal_function SEMICOLON
    (14) statement -> . is_true_function SEMICOLON
    (15) statement -> . case_statement SEMICOLON
    (16) statement -> . while_statement SEMICOLON
    (17) statement -> . procedure_call SEMICOLON
    (18) statement -> . print_statement SEMICOLON
    (19) statement -> . empty
    (20) variable_declaration -> . NEW ID COMMA type_value
    (47) variable_update -> . VALUES LPAREN ID COMMA value RPAREN
    (48) alter_variable -> . ALTER LPAREN ID COMMA operator COMMA value RPAREN
    (49) variable_with_alter -> . VALUES LPAREN ID COMMA alter_variable RPAREN
    (50) alter_b_variable -> . ALTER_B LPAREN ID RPAREN
    (51) signal_function -> . SIGNAL LPAREN position_state COMMA position_state RPAREN
    (53) view_signal_function -> . VIEW_SIGNAL LPAREN position_state RPAREN
    (54) is_true_function -> . IS_TRUE LPAREN ID RPAREN
    (55) case_statement -> . CASE ID case_options
    (56) case_statement -> . CASE ID case_options else_option
    (61) while_statement -> . WHILE condition LPAREN statements RPAREN
    (64) procedure_call -> . CALL LPAREN ID RPAREN
    (65) print_statement -> . PRINT_VALUES LPAREN print_value_list RPAREN
    (71) empty -> .

  ! shift/reduce conflict for NEW resolved as shift
  ! shift/reduce conflict for VALUES resolved as shift
  ! shift/reduce conflict for ALTER resolved as shift
  ! shift/reduce conflict for ALTER_B resolved as shift
  ! shift/reduce conflict for SIGNAL resolved as shift
  ! shift/reduce conflict for VIEW_SIGNAL resolved as shift
  ! shift/reduce conflict for IS_TRUE resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for PRINT_VALUES resolved as shift
    NEW             shift and go to state 23
    VALUES          shift and go to state 24
    ALTER           shift and go to state 25
    ALTER_B         shift and go to state 26
    SIGNAL          shift and go to state 27
    VIEW_SIGNAL     shift and go to state 28
    IS_TRUE         shift and go to state 29
    CASE            shift and go to state 30
    WHILE           shift and go to state 31
    CALL            shift and go to state 32
    PRINT_VALUES    shift and go to state 33
    RPAREN          reduce using rule 71 (empty -> .)

  ! NEW             [ reduce using rule 71 (empty -> .) ]
  ! VALUES          [ reduce using rule 71 (empty -> .) ]
  ! ALTER           [ reduce using rule 71 (empty -> .) ]
  ! ALTER_B         [ reduce using rule 71 (empty -> .) ]
  ! SIGNAL          [ reduce using rule 71 (empty -> .) ]
  ! VIEW_SIGNAL     [ reduce using rule 71 (empty -> .) ]
  ! IS_TRUE         [ reduce using rule 71 (empty -> .) ]
  ! CASE            [ reduce using rule 71 (empty -> .) ]
  ! WHILE           [ reduce using rule 71 (empty -> .) ]
  ! CALL            [ reduce using rule 71 (empty -> .) ]
  ! PRINT_VALUES    [ reduce using rule 71 (empty -> .) ]

    statements                     shift and go to state 8
    statement                      shift and go to state 9
    variable_declaration           shift and go to state 10
    variable_update                shift and go to state 11
    alter_variable                 shift and go to state 12
    variable_with_alter            shift and go to state 13
    alter_b_variable               shift and go to state 14
    signal_function                shift and go to state 15
    view_signal_function           shift and go to state 16
    is_true_function               shift and go to state 17
    case_statement                 shift and go to state 18
    while_statement                shift and go to state 19
    procedure_call                 shift and go to state 20
    print_statement                shift and go to state 21
    empty                          shift and go to state 22

state 8

    (4) procedure -> PROC ID LPAREN statements . RPAREN SEMICOLON

    RPAREN          shift and go to state 34


state 9

    (5) statements -> statement .
    (6) statements -> statement . statements
    (5) statements -> . statement
    (6) statements -> . statement statements
    (7) statement -> . variable_declaration SEMICOLON
    (8) statement -> . variable_update SEMICOLON
    (9) statement -> . alter_variable SEMICOLON
    (10) statement -> . variable_with_alter SEMICOLON
    (11) statement -> . alter_b_variable SEMICOLON
    (12) statement -> . signal_function SEMICOLON
    (13) statement -> . view_signal_function SEMICOLON
    (14) statement -> . is_true_function SEMICOLON
    (15) statement -> . case_statement SEMICOLON
    (16) statement -> . while_statement SEMICOLON
    (17) statement -> . procedure_call SEMICOLON
    (18) statement -> . print_statement SEMICOLON
    (19) statement -> . empty
    (20) variable_declaration -> . NEW ID COMMA type_value
    (47) variable_update -> . VALUES LPAREN ID COMMA value RPAREN
    (48) alter_variable -> . ALTER LPAREN ID COMMA operator COMMA value RPAREN
    (49) variable_with_alter -> . VALUES LPAREN ID COMMA alter_variable RPAREN
    (50) alter_b_variable -> . ALTER_B LPAREN ID RPAREN
    (51) signal_function -> . SIGNAL LPAREN position_state COMMA position_state RPAREN
    (53) view_signal_function -> . VIEW_SIGNAL LPAREN position_state RPAREN
    (54) is_true_function -> . IS_TRUE LPAREN ID RPAREN
    (55) case_statement -> . CASE ID case_options
    (56) case_statement -> . CASE ID case_options else_option
    (61) while_statement -> . WHILE condition LPAREN statements RPAREN
    (64) procedure_call -> . CALL LPAREN ID RPAREN
    (65) print_statement -> . PRINT_VALUES LPAREN print_value_list RPAREN
    (71) empty -> .

  ! shift/reduce conflict for NEW resolved as shift
  ! shift/reduce conflict for VALUES resolved as shift
  ! shift/reduce conflict for ALTER resolved as shift
  ! shift/reduce conflict for ALTER_B resolved as shift
  ! shift/reduce conflict for SIGNAL resolved as shift
  ! shift/reduce conflict for VIEW_SIGNAL resolved as shift
  ! shift/reduce conflict for IS_TRUE resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for PRINT_VALUES resolved as shift
  ! reduce/reduce conflict for RPAREN resolved using rule 5 (statements -> statement .)
    RPAREN          reduce using rule 5 (statements -> statement .)
    NEW             shift and go to state 23
    VALUES          shift and go to state 24
    ALTER           shift and go to state 25
    ALTER_B         shift and go to state 26
    SIGNAL          shift and go to state 27
    VIEW_SIGNAL     shift and go to state 28
    IS_TRUE         shift and go to state 29
    CASE            shift and go to state 30
    WHILE           shift and go to state 31
    CALL            shift and go to state 32
    PRINT_VALUES    shift and go to state 33

  ! NEW             [ reduce using rule 71 (empty -> .) ]
  ! VALUES          [ reduce using rule 71 (empty -> .) ]
  ! ALTER           [ reduce using rule 71 (empty -> .) ]
  ! ALTER_B         [ reduce using rule 71 (empty -> .) ]
  ! SIGNAL          [ reduce using rule 71 (empty -> .) ]
  ! VIEW_SIGNAL     [ reduce using rule 71 (empty -> .) ]
  ! IS_TRUE         [ reduce using rule 71 (empty -> .) ]
  ! CASE            [ reduce using rule 71 (empty -> .) ]
  ! WHILE           [ reduce using rule 71 (empty -> .) ]
  ! CALL            [ reduce using rule 71 (empty -> .) ]
  ! PRINT_VALUES    [ reduce using rule 71 (empty -> .) ]
  ! RPAREN          [ reduce using rule 71 (empty -> .) ]

    statement                      shift and go to state 9
    statements                     shift and go to state 35
    variable_declaration           shift and go to state 10
    variable_update                shift and go to state 11
    alter_variable                 shift and go to state 12
    variable_with_alter            shift and go to state 13
    alter_b_variable               shift and go to state 14
    signal_function                shift and go to state 15
    view_signal_function           shift and go to state 16
    is_true_function               shift and go to state 17
    case_statement                 shift and go to state 18
    while_statement                shift and go to state 19
    procedure_call                 shift and go to state 20
    print_statement                shift and go to state 21
    empty                          shift and go to state 22

state 10

    (7) statement -> variable_declaration . SEMICOLON

    SEMICOLON       shift and go to state 36


state 11

    (8) statement -> variable_update . SEMICOLON

    SEMICOLON       shift and go to state 37


state 12

    (9) statement -> alter_variable . SEMICOLON

    SEMICOLON       shift and go to state 38


state 13

    (10) statement -> variable_with_alter . SEMICOLON

    SEMICOLON       shift and go to state 39


state 14

    (11) statement -> alter_b_variable . SEMICOLON

    SEMICOLON       shift and go to state 40


state 15

    (12) statement -> signal_function . SEMICOLON

    SEMICOLON       shift and go to state 41


state 16

    (13) statement -> view_signal_function . SEMICOLON

    SEMICOLON       shift and go to state 42


state 17

    (14) statement -> is_true_function . SEMICOLON

    SEMICOLON       shift and go to state 43


state 18

    (15) statement -> case_statement . SEMICOLON

    SEMICOLON       shift and go to state 44


state 19

    (16) statement -> while_statement . SEMICOLON

    SEMICOLON       shift and go to state 45


state 20

    (17) statement -> procedure_call . SEMICOLON

    SEMICOLON       shift and go to state 46


state 21

    (18) statement -> print_statement . SEMICOLON

    SEMICOLON       shift and go to state 47


state 22

    (19) statement -> empty .

    NEW             reduce using rule 19 (statement -> empty .)
    VALUES          reduce using rule 19 (statement -> empty .)
    ALTER           reduce using rule 19 (statement -> empty .)
    ALTER_B         reduce using rule 19 (statement -> empty .)
    SIGNAL          reduce using rule 19 (statement -> empty .)
    VIEW_SIGNAL     reduce using rule 19 (statement -> empty .)
    IS_TRUE         reduce using rule 19 (statement -> empty .)
    CASE            reduce using rule 19 (statement -> empty .)
    WHILE           reduce using rule 19 (statement -> empty .)
    CALL            reduce using rule 19 (statement -> empty .)
    PRINT_VALUES    reduce using rule 19 (statement -> empty .)
    RPAREN          reduce using rule 19 (statement -> empty .)


state 23

    (20) variable_declaration -> NEW . ID COMMA type_value

    ID              shift and go to state 48


state 24

    (47) variable_update -> VALUES . LPAREN ID COMMA value RPAREN
    (49) variable_with_alter -> VALUES . LPAREN ID COMMA alter_variable RPAREN

    LPAREN          shift and go to state 49


state 25

    (48) alter_variable -> ALTER . LPAREN ID COMMA operator COMMA value RPAREN

    LPAREN          shift and go to state 50


state 26

    (50) alter_b_variable -> ALTER_B . LPAREN ID RPAREN

    LPAREN          shift and go to state 51


state 27

    (51) signal_function -> SIGNAL . LPAREN position_state COMMA position_state RPAREN

    LPAREN          shift and go to state 52


state 28

    (53) view_signal_function -> VIEW_SIGNAL . LPAREN position_state RPAREN

    LPAREN          shift and go to state 53


state 29

    (54) is_true_function -> IS_TRUE . LPAREN ID RPAREN

    LPAREN          shift and go to state 54


state 30

    (55) case_statement -> CASE . ID case_options
    (56) case_statement -> CASE . ID case_options else_option

    ID              shift and go to state 55


state 31

    (61) while_statement -> WHILE . condition LPAREN statements RPAREN
    (62) condition -> . value
    (63) condition -> . is_true_function
    (25) value -> . NUMBER
    (26) value -> . BOOLEAN
    (27) value -> . STRING
    (28) value -> . ID
    (29) value -> . arith_op
    (54) is_true_function -> . IS_TRUE LPAREN ID RPAREN
    (30) arith_op -> . math_operation
    (31) math_operation -> . math_operation operator math_operation
    (32) math_operation -> . math_operation operator math_value
    (33) math_operation -> . math_value operator math_operation
    (34) math_operation -> . math_value operator math_value
    (36) math_value -> . ID
    (37) math_value -> . NUMBER
    (38) math_value -> . math_value_negative
    (39) math_value -> . math_operation_paren
    (40) math_value_negative -> . SUB ID
    (41) math_value_negative -> . SUB NUMBER
    (35) math_operation_paren -> . LPAREN math_operation RPAREN

    NUMBER          shift and go to state 60
    BOOLEAN         shift and go to state 61
    STRING          shift and go to state 62
    ID              shift and go to state 63
    IS_TRUE         shift and go to state 29
    SUB             shift and go to state 69
    LPAREN          shift and go to state 57

    condition                      shift and go to state 56
    value                          shift and go to state 58
    is_true_function               shift and go to state 59
    arith_op                       shift and go to state 64
    math_operation                 shift and go to state 65
    math_value                     shift and go to state 66
    math_value_negative            shift and go to state 67
    math_operation_paren           shift and go to state 68

state 32

    (64) procedure_call -> CALL . LPAREN ID RPAREN

    LPAREN          shift and go to state 70


state 33

    (65) print_statement -> PRINT_VALUES . LPAREN print_value_list RPAREN

    LPAREN          shift and go to state 71


state 34

    (4) procedure -> PROC ID LPAREN statements RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 72


state 35

    (6) statements -> statement statements .

    RPAREN          reduce using rule 6 (statements -> statement statements .)


state 36

    (7) statement -> variable_declaration SEMICOLON .

    NEW             reduce using rule 7 (statement -> variable_declaration SEMICOLON .)
    VALUES          reduce using rule 7 (statement -> variable_declaration SEMICOLON .)
    ALTER           reduce using rule 7 (statement -> variable_declaration SEMICOLON .)
    ALTER_B         reduce using rule 7 (statement -> variable_declaration SEMICOLON .)
    SIGNAL          reduce using rule 7 (statement -> variable_declaration SEMICOLON .)
    VIEW_SIGNAL     reduce using rule 7 (statement -> variable_declaration SEMICOLON .)
    IS_TRUE         reduce using rule 7 (statement -> variable_declaration SEMICOLON .)
    CASE            reduce using rule 7 (statement -> variable_declaration SEMICOLON .)
    WHILE           reduce using rule 7 (statement -> variable_declaration SEMICOLON .)
    CALL            reduce using rule 7 (statement -> variable_declaration SEMICOLON .)
    PRINT_VALUES    reduce using rule 7 (statement -> variable_declaration SEMICOLON .)
    RPAREN          reduce using rule 7 (statement -> variable_declaration SEMICOLON .)


state 37

    (8) statement -> variable_update SEMICOLON .

    NEW             reduce using rule 8 (statement -> variable_update SEMICOLON .)
    VALUES          reduce using rule 8 (statement -> variable_update SEMICOLON .)
    ALTER           reduce using rule 8 (statement -> variable_update SEMICOLON .)
    ALTER_B         reduce using rule 8 (statement -> variable_update SEMICOLON .)
    SIGNAL          reduce using rule 8 (statement -> variable_update SEMICOLON .)
    VIEW_SIGNAL     reduce using rule 8 (statement -> variable_update SEMICOLON .)
    IS_TRUE         reduce using rule 8 (statement -> variable_update SEMICOLON .)
    CASE            reduce using rule 8 (statement -> variable_update SEMICOLON .)
    WHILE           reduce using rule 8 (statement -> variable_update SEMICOLON .)
    CALL            reduce using rule 8 (statement -> variable_update SEMICOLON .)
    PRINT_VALUES    reduce using rule 8 (statement -> variable_update SEMICOLON .)
    RPAREN          reduce using rule 8 (statement -> variable_update SEMICOLON .)


state 38

    (9) statement -> alter_variable SEMICOLON .

    NEW             reduce using rule 9 (statement -> alter_variable SEMICOLON .)
    VALUES          reduce using rule 9 (statement -> alter_variable SEMICOLON .)
    ALTER           reduce using rule 9 (statement -> alter_variable SEMICOLON .)
    ALTER_B         reduce using rule 9 (statement -> alter_variable SEMICOLON .)
    SIGNAL          reduce using rule 9 (statement -> alter_variable SEMICOLON .)
    VIEW_SIGNAL     reduce using rule 9 (statement -> alter_variable SEMICOLON .)
    IS_TRUE         reduce using rule 9 (statement -> alter_variable SEMICOLON .)
    CASE            reduce using rule 9 (statement -> alter_variable SEMICOLON .)
    WHILE           reduce using rule 9 (statement -> alter_variable SEMICOLON .)
    CALL            reduce using rule 9 (statement -> alter_variable SEMICOLON .)
    PRINT_VALUES    reduce using rule 9 (statement -> alter_variable SEMICOLON .)
    RPAREN          reduce using rule 9 (statement -> alter_variable SEMICOLON .)


state 39

    (10) statement -> variable_with_alter SEMICOLON .

    NEW             reduce using rule 10 (statement -> variable_with_alter SEMICOLON .)
    VALUES          reduce using rule 10 (statement -> variable_with_alter SEMICOLON .)
    ALTER           reduce using rule 10 (statement -> variable_with_alter SEMICOLON .)
    ALTER_B         reduce using rule 10 (statement -> variable_with_alter SEMICOLON .)
    SIGNAL          reduce using rule 10 (statement -> variable_with_alter SEMICOLON .)
    VIEW_SIGNAL     reduce using rule 10 (statement -> variable_with_alter SEMICOLON .)
    IS_TRUE         reduce using rule 10 (statement -> variable_with_alter SEMICOLON .)
    CASE            reduce using rule 10 (statement -> variable_with_alter SEMICOLON .)
    WHILE           reduce using rule 10 (statement -> variable_with_alter SEMICOLON .)
    CALL            reduce using rule 10 (statement -> variable_with_alter SEMICOLON .)
    PRINT_VALUES    reduce using rule 10 (statement -> variable_with_alter SEMICOLON .)
    RPAREN          reduce using rule 10 (statement -> variable_with_alter SEMICOLON .)


state 40

    (11) statement -> alter_b_variable SEMICOLON .

    NEW             reduce using rule 11 (statement -> alter_b_variable SEMICOLON .)
    VALUES          reduce using rule 11 (statement -> alter_b_variable SEMICOLON .)
    ALTER           reduce using rule 11 (statement -> alter_b_variable SEMICOLON .)
    ALTER_B         reduce using rule 11 (statement -> alter_b_variable SEMICOLON .)
    SIGNAL          reduce using rule 11 (statement -> alter_b_variable SEMICOLON .)
    VIEW_SIGNAL     reduce using rule 11 (statement -> alter_b_variable SEMICOLON .)
    IS_TRUE         reduce using rule 11 (statement -> alter_b_variable SEMICOLON .)
    CASE            reduce using rule 11 (statement -> alter_b_variable SEMICOLON .)
    WHILE           reduce using rule 11 (statement -> alter_b_variable SEMICOLON .)
    CALL            reduce using rule 11 (statement -> alter_b_variable SEMICOLON .)
    PRINT_VALUES    reduce using rule 11 (statement -> alter_b_variable SEMICOLON .)
    RPAREN          reduce using rule 11 (statement -> alter_b_variable SEMICOLON .)


state 41

    (12) statement -> signal_function SEMICOLON .
